  utility categories on arrays, containsCategoryWithLabel: and categoryLabels.
  GDataCategory's isEqual: now compares label data as well.
  
- Docs sample app can now delete a document.

- Picasa Web sample app now shows how to move a photo to another album.

- Added MacOSX version to service request user agent, along with a gzip string
  expected in the user agent by Google servers.

  
Bugs Fixed

- Framework is now built with install location of @loader_path/../Frameworks...
  instead of @executable_path/../Frameworks/... so it can be loaded by other
  bundles such as plug-ins.
  
- A specific format is now specified in the header for calling setUserAgent: 
  (like [service setUserAgent:@"CompanyName-AppName-1.0"])
  The library now will append the client library version to the user agent
  string.
  
- GDataObject's isEqual: no longer compares local element names
  
- Fixed PicasaWeb feed URL parameter escaping.

- Fixed GDataCategory's categoriesWithScheme: category on NSArray.

- Now removes null characters from strings added to XML elements to avoid
  XML that makes servers unhappy.
  
- Feed, entry, and service classes now call their own methods more reliably
  to aid subclassing.
  
- Text constructs no longer specify "type=text" since that is implied according
  to the Atom standard.
  
- Service unit tests now cover http cookies and caching.

- HTTP cookies now work with server at localhost.

- Now defining -hash on GDataObject for better Leopard compatibility.


Release 1.2.0
15-August-2007
Changes since 1.1.0

Additions

- Added support for Google Code Search

- Added support for Google Docs document list

- Added http logging (see GDataHTTPFetcherLogging.h)

- Added ability to provide a connection class for GDataHTTPFetcher

- Added routines to let library users override standard classes
  with their own surrogate subclasses (see GDataServiceBase.h)
  
- Added setProperty:forKey: and propertyForKey: to GDataObject so users can